add_subdirectory(util)
add_subdirectory(imageprocessing)
add_subdirectory(region_features)
define_module(nanoflann HEADER INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
define_module(cohear HEADER INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
define_module(scopegraph HEADER INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(sg_gui)
